edition = "2023";

package wayplatform.connect.mapon.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/way-platform/mapon-go/proto/gen/go/wayplatform/connect/mapon/v1;maponv1";

// CanMetricValue represents a single metric value with a timestamp.
message CanMetricValue {
  // Timestamp of the value.
  google.protobuf.Timestamp time = 1;

  // The value (can be numeric or string, stored as string for flexibility, or use specific types).
  // Mapon API returns values as strings or numbers depending on field.
  // We'll use string to be safe and parse in client if needed, or double if we are sure.
  // Most CAN values are numeric. Let's use double.
  double value = 2;
}

// UnitCanPeriodData aggregates CAN metric values over a period for a specific unit.
message UnitCanPeriodData {
  // The ID of the unit.
  int64 unit_id = 1;

  // Average RPM values.
  repeated CanMetricValue rpm_average = 2;

  // Maximum RPM values.
  repeated CanMetricValue rpm_max = 3;

  // Fuel level values (%).
  repeated CanMetricValue fuel_level_percent = 4;

  // Service distance values (km).
  repeated CanMetricValue service_distance_km = 5;

  // Total distance values (km).
  repeated CanMetricValue total_distance_km = 6;

  // Total fuel values (liters or kg).
  repeated CanMetricValue total_fuel_l = 7;

  // Total engine hours values.
  repeated CanMetricValue total_engine_hours = 8;

  // Ambient temperature values (Â°C).
  repeated CanMetricValue ambient_temperature_c = 9;

  // Weight on chassis total values (kg).
  repeated CanMetricValue weight_on_chassis_total_kg = 10;

  // EV Battery relative level values (%).
  repeated CanMetricValue ev_battery_rel_percent = 11;

  // EV Battery absolute level values (kWh).
  repeated CanMetricValue ev_battery_abs_kwh = 12;

  // EV Charging status values (0/1).
  repeated CanMetricValue ev_charging = 13;

  // Weight on axis values.
  repeated AxisWeightMetricValue weight_on_axis = 14;
}

// AxisWeightMetricValue represents a weight metric on a specific axis/wheel.
message AxisWeightMetricValue {
  google.protobuf.Timestamp time = 1;
  double value_kg = 2;
  int32 axis_id = 3;
  int32 wheel_id = 4;
}
